# lambdarama

./: .dockerignore  .gitignore  .gitlint  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/actions/hatch_setup/: action.yml
.github/workflows/: on_pull_request_openend.yml  on_push_main.yml  workflow_lint.yml  workflow_lint_commits.yml  workflow_push_to_ecr.yml  workflow_test.yml
requirements/: requirements-dev.txt
src/lambdarama/: __about__.py  __init__.py  app.py  config.py  handler.py
tests/: __init__.py  test_app.py  test_handler.py
